--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"start": "serve -s dist"
 	},
 	"dependencies": {
+		"@sveltejs/adapter-vercel": "^5.4.3",
 		"axios": "^1.7.5",
 		"dotenv": "^16.4.5",
 		"lodash": "^4.17.21",
