--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
 	},
 	"dependencies": {
 		"@sveltejs/adapter-vercel": "^5.4.3",
+		"@types/node": "^22.5.5",
+		"autoprefixer": "^10.4.20",
 		"axios": "^1.7.5",
 		"dotenv": "^16.4.5",
+		"jsonwebtoken": "^9.0.2",
 		"lodash": "^4.17.21",
 		"mitt": "^3.0.1",
+		"pg": "^8.12.0",
+		"postcss": "^8.4.47",
 		"tailwind-merge": "^2.5.2",
 		"tailwind-variants": "^0.2.1",
-		"tailwindcss": "^3.4.10"
+		"tailwindcss": "^3.4.10",
+		"uuid": "^10.0.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.9.0",
