--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
 	},
 	"dependencies": {
 		"@sveltejs/adapter-vercel": "^5.4.3",
+		"@tsconfig/svelte": "^5.0.4",
 		"@types/node": "^22.5.5",
 		"autoprefixer": "^10.4.20",
 		"axios": "^1.7.5",
+		"bits-ui": "^0.21.13",
 		"dotenv": "^16.4.5",
 		"jsonwebtoken": "^9.0.2",
 		"lodash": "^4.17.21",
 		"mitt": "^3.0.1",
+		"moment": "^2.30.1",
 		"pg": "^8.12.0",
 		"postcss": "^8.4.47",
+		"svelte-radix": "^1.1.1",
 		"tailwind-merge": "^2.5.2",
 		"tailwind-variants": "^0.2.1",
 		"tailwindcss": "^3.4.10",
@@ -32,8 +36,9 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-node": "^5.2.2",
 		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.1.2",
 		"@types/eslint": "^9.6.0",
+		"clsx": "^2.1.1",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
@@ -43,8 +48,8 @@
 		"sass": "^1.77.8",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.8.5",
-		"typescript": "^5.5.4",
-		"vite": "^5.0.3",
+		"typescript": "^5.6.2",
+		"vite": "^5.4.5",
 		"vitest": "^2.0.0"
 	}
 }
