--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"start": "serve -s dist"
 	},
 	"dependencies": {
-		"@sveltejs/adapter-vercel": "^5.4.3",
+		"@sveltejs/adapter-static": "^3.0.4",
 		"@tsconfig/svelte": "^5.0.4",
 		"@types/node": "^22.5.5",
 		"autoprefixer": "^10.4.20",
