restructing and working on join page + login flow

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 		"start": "serve -s dist"
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-free": "^6.6.0",
+		"@mdi/font": "^7.4.47",
 		"@sveltejs/adapter-static": "^3.0.4",
 		"@tsconfig/svelte": "^5.0.4",
 		"@types/node": "^22.5.5",
@@ -23,8 +25,8 @@
 		"lodash": "^4.17.21",
 		"mitt": "^3.0.1",
 		"moment": "^2.30.1",
-		"pg": "^8.12.0",
 		"postcss": "^8.4.47",
+		"simple-icons": "^13.10.0",
 		"svelte-radix": "^1.1.1",
 		"tailwind-merge": "^2.5.2",
 		"tailwind-variants": "^0.2.1",
