--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches: 'main'
 
+env:
+  VITE_EVE_APP_CLIENT_ID: ${{ vars.VITE_EVE_APP_CLIENT_ID }}
+  VITE_APP_HOST: ${{ vars.VITE_APP_HOST }}
+
 jobs:
   build_site:
     runs-on: ubuntu-latest
@@ -23,8 +27,8 @@ jobs:
       - name: build
         env:
           BASE_PATH: '/${{ github.event.repository.name }}'
-          VITE_EVE_APP_CLIENT_ID: ${{ vars.VITE_EVE_APP_CLIENT_ID }}
-          VITE_APP_HOST: ${{ vars.VITE_APP_HOST }}
+          VITE_EVE_APP_CLIENT_ID: $VITE_EVE_APP_CLIENT_ID
+          VITE_APP_HOST: $VITE_APP_HOST
         run: |
           npm run build
 
