--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,6 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches: 'main'
-
 env:
   VITE_EVE_APP_CLIENT_ID: ${{ vars.VITE_EVE_APP_CLIENT_ID }}
   VITE_APP_HOST: ${{ vars.VITE_APP_HOST }}
@@ -27,8 +26,9 @@ jobs:
       - name: build
         env:
           BASE_PATH: '/${{ github.event.repository.name }}'
-          VITE_EVE_APP_CLIENT_ID: '$VITE_EVE_APP_CLIENT_ID'
-          VITE_APP_HOST: '$VITE_APP_HOST'
+          VITE_EVE_APP_CLIENT_ID: ${{ vars.VITE_EVE_APP_CLIENT_ID }}
+          VITE_APP_HOST: ${{ vars.VITE_APP_HOST }}
+          TESTING: ${{ vars }}
         run: |
           npm run build
 
