--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,8 @@ jobs:
         env:
           BASE_PATH: '/${{ github.event.repository.name }}'
           VITE_EVE_APP_CLIENT_ID: ${{ vars.EVE_APP_CLIENT_ID }}
-          VITE_APP_HOST: ${{ vars.WEB_HOST }}
+          VITE_WEB_HOST: ${{ vars.WEB_HOST }}
+          VITE_SERVER_HOST: ${{ vars.SERVER_HOST }}
         run: |
           npm run build
 
