--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"postcss-load-config": "^6.0.1",
 		"postcss-nested": "^6.2.0",
 		"simple-icons": "^13.10.0",
+		"svelte-preprocess": "^6.0.2",
 		"svelte-radix": "^1.1.1",
 		"tailwind-merge": "^2.5.2",
 		"tailwind-variants": "^0.2.1",
