build out nomicon base route + nav + auth + shoot me

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"jsonwebtoken": "^9.0.2",
 		"lodash": "^4.17.21",
 		"mitt": "^3.0.1",
+		"mode-watcher": "^0.4.1",
 		"moment": "^2.30.1",
 		"postcss": "^8.4.47",
 		"postcss-load-config": "^6.0.1",
@@ -31,6 +32,7 @@
 		"simple-icons": "^13.10.0",
 		"svelte-preprocess": "^6.0.2",
 		"svelte-radix": "^1.1.1",
+		"svelte-sonner": "^0.3.28",
 		"tailwind-merge": "^2.5.2",
 		"tailwind-variants": "^0.2.1",
 		"tailwindcss": "^3.4.10",
