--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
 	},
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^6.6.0",
+		"@internationalized/date": "^3.5.6",
 		"@mdi/font": "^7.4.47",
 		"@sveltejs/adapter-static": "^3.0.4",
 		"@tsconfig/svelte": "^5.0.4",
 		"@types/node": "^22.5.5",
 		"autoprefixer": "^10.4.20",
 		"axios": "^1.7.5",
-		"bits-ui": "^0.21.15",
+		"bits-ui": "^0.21.16",
 		"dotenv": "^16.4.5",
+		"echarts": "^5.5.1",
 		"jsonwebtoken": "^9.0.2",
 		"lodash": "^4.17.21",
 		"mitt": "^3.0.1",
