--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,7 @@ jobs:
           VITE_EVE_APP_CLIENT_ID: ${{ vars.EVE_APP_CLIENT_ID }}
           VITE_WEB_HOST: ${{ vars.WEB_HOST }}
           VITE_SERVER_HOST: ${{ vars.SERVER_HOST }}
+          VITE_BIRDHOUSE_DOMAIN: ${{ vars.BIRDHOUSE_DOMAIN }}
         run: |
           npm run build
 
