work on wiki stuff

--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
 		"bits-ui": "^0.21.16",
 		"dotenv": "^16.4.5",
 		"echarts": "^5.5.1",
+		"github-markdown-css": "^5.7.0",
 		"jsonwebtoken": "^9.0.2",
 		"lodash": "^4.17.21",
+		"marked": "^14.1.2",
 		"mitt": "^3.0.1",
 		"mode-watcher": "^0.4.1",
 		"moment": "^2.30.1",
