--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "vite preview",
+		"preview": "vite preview --port 3000",
 		"test": "vitest",
 		"tailwind:watch": "npx tailwindcss -i ./src/app.css -o ./static/output.css --watch",
 		"start": "serve -s dist"
