--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
           VITE_EVE_APP_CLIENT_ID: ${{ vars.EVE_APP_CLIENT_ID }}
           VITE_WEB_HOST: ${{ vars.WEB_HOST }}
           VITE_SERVER_HOST: ${{ vars.SERVER_HOST }}
-          VITE_BIRDHOUSE_DOMAIN: ${{ vars.BIRDHOUSE_DOMAIN }}
+          VITE_PAP_SERVICE_DOMAIN: ${{ vars.PAP_SERVICE_DOMAIN }}
         run: |
           npm run build
 
